test/invalidImports/contentSharingService.interface.ts
export interface IA {}

export interface IB {}

export class C {
  public errorCode: string;
}
